# a2a-demo-week1

./: .gitignore  Readme.md  agents_registry.json  pyproject.toml
agent_host/: __main__.py
agents/google_search/: server.py
agents/summary_video/: server.py  video_summary.py
agents/text_to_image/: server.py
protos/: agent.proto  agent_pb2.py  agent_pb2_grpc.py
shared/: gemini_client.py  gprc_client.py
